# tetMeshQueries

./: .gitignore  CMakeLists.txt  README.md
tetMeshQueryLib/: CMakeLists.txt  OptixTetQuery.cpp  internalTypes.h  optixQueryKernel.cu
